workload/a0005-is/microservice-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-web
  labels:
    app.kubernetes.io/name: microservice-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: microservice-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: microservice-web
    spec:
      automountServiceAccountToken: false
      serviceAccount: microservice-web-sa
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - microservice-web
            topologyKey: kubernetes.io/hostname
      containers:
      - name: microservice-web
        image: YOUR_ACR.azurecr.io/live/a0005/chain-api:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          protocol: TCP
          containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 10001
          runAsGroup: 3000
          capabilities:
            drop:
              - all
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
        pci-scope: in-scope
---
kind: Service
apiVersion: v1
metadata:
  name: microservice-web-service
spec:
  selector:
    app.kubernetes.io/name: microservice-web
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: web
