workload/a0005-is/microservice-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-web-ingress
  namespace: a0005-is
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      proxy_ssl_name "microservice-web-sa.a0005-is.cluster.local";
    nginx.ingress.kubernetes.io/proxy-ssl-secret: osm-system/osm-ca-bundle
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
    nginx.ingress.kubernetes.io/proxy_ssl_name: microservice-web-sa.a0005-is.cluster.local
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - bu0001a0005-00.aks-ingress.contoso.com
  rules:
  - host: bu0001a0005-00.aks-ingress.contoso.com
    http:
      paths:
      - path: /.*
        pathType: Prefix
        backend:
          service:
            name: microservice-web
            port:
              number: 80
